--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,4 +14,11 @@ header {
   margin-top: 2.5rem;
   display: flex;
   gap: 1.2rem;
+  justify-content: center;
+}
+/******Socials****/
+.header_socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
