--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -1,3 +1,41 @@
 #portfolio {
   height: 40vh;
 }
+.portfolio_container {
+  display: grid;
+  margin: 5rem auto;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2.5rem;
+}
+.portfolio_item {
+  background: var(--color-bg-variant);
+  padding: 1.2rem;
+  border-radius: 1rem;
+  border: 1px solid transparent;
+  transition: var(--transition);
+  cursor: pointer;
+}
+.portfolio_links {
+  display: flex;
+  margin: 10px auto;
+  gap: 1rem;
+}
+.portfolio_item:hover {
+  border-color: var(--color-primary-variant);
+  background: transparent;
+}
+.portfolio_item h3 {
+  margin: 1.2rem 0 2rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .portfolio_container {
+    grid-template-columns: 1fr 1fr;
+    gap: 1.2rem;
+  }
+  @media screen and (max-width: 600px) {
+    .portfolio_container {
+      grid-template-columns: 1fr;
+    }
+  }
+}
