--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,15 @@ html {
 }
 
 :root {
-  --color-bg: #1f1f38;
-  --color-b-variant: #2c2c6c;
+  /* --color-bg: #1f1f38; */
+  --color-bg: #080f0f;
+  /* --color-bg-variant: #2c2c6c; */
+  --color-bg-variant: #36486b;
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: white;
   --color-light: rgba(255, 255, 255, 0.6);
-
+  --transition: all 400ms ease;
   --container-width-lg: 75%;
   --container-width-md: 86%;
   --container-width-ms: 90%;
@@ -39,7 +41,6 @@ body {
   color: white;
   line-height: 1;
 
-  --transition: all 400ms ease;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
