--- a/src/projects/socialmedia/socialmedia.css
+++ b/src/projects/socialmedia/socialmedia.css
@@ -1,47 +1,33 @@
 body {
-  color: aliceblue;
+  color: white;
 }
 .nav {
   border: 1px solid blue;
   position: relative;
 }
 
-.nav-right {
-  background: crimson;
-  position: absolute;
-  right: 2vw;
-  top: 15vh;
-  height: 100vh;
-  width: 20%;
-  max-width: 400px;
-  min-width: 300px;
-}
-
 .content {
   position: absolute;
-  width: 40vw;
+  width: 45vw;
   min-width: 300px;
   height: 100vh;
   top: 17vh;
-  background: white;
+  background: green;
   transform: translateX(-50%);
   left: 50%;
   color: black;
-  border: 4px solid orange;
+  border: 4px solid blue;
 }
 
-@media screen and (max-width: 1124px) {
-  .nav-right {
-    display: none;
-  }
+@media screen and (max-width: 1224px) {
   .nav-left {
     left: 0;
     min-width: 185px;
   }
   .content {
     border: 5px solid coral;
-    width: 80vw;
-    left: 64vw;
+    width: 78vw;
+    left: 60vw;
   }
 }
 
