--- a/src/projects/socialmedia/socialmedia.css
+++ b/src/projects/socialmedia/socialmedia.css
@@ -11,12 +11,12 @@ body {
   width: 45vw;
   min-width: 300px;
   height: 100vh;
-  top: 17vh;
-  background: green;
+  padding-top: 17vh;
+  top: 0vh;
+  overflow-y: scroll;
   transform: translateX(-50%);
   left: 50%;
   color: black;
-  border: 4px solid blue;
 }
 
 @media screen and (max-width: 1224px) {
