--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -3,7 +3,8 @@
   position: absolute;
   top: 0;
   height: 7vh !important;
-  width: 100vw;
+  width: 100%;
+
   z-index: 3;
   background: var(--color-primary-social);
   display: flex;
