--- a/src/projects/socialmedia/Nav/NavLeft/Navleft.css
+++ b/src/projects/socialmedia/Nav/NavLeft/Navleft.css
@@ -1,12 +1,12 @@
 .nav-left {
   background-color: transparent;
-  position: absolute;
+  position: fixed;
   left: 9vw;
-  top: 15vh;
+  top: 80px;
   width: 25%;
   max-width: 400px;
   min-width: 180px;
-  height: 85vh;
+
   color: black;
 }
 
