--- a/src/projects/socialmedia/Nav/NavRight/NavRight.css
+++ b/src/projects/socialmedia/Nav/NavRight/NavRight.css
@@ -1,11 +1,11 @@
 .nav-right {
-  position: absolute;
+  position: fixed;
   right: 9vw;
-  top: 15vh;
+  top: 80px;
   width: 25%;
   max-width: 400px;
   min-width: 180px;
-  height: 85vh;
+
   color: black;
 }
 .nav-right-stats {
