--- a/src/projects/socialmedia/socialmedia.css
+++ b/src/projects/socialmedia/socialmedia.css
@@ -11,9 +11,9 @@ body {
   width: 45vw;
   min-width: 300px;
   height: 100vh;
-  padding-top: 17vh;
+  padding-top: 80px;
   top: 0vh;
-  overflow-y: scroll;
+
   transform: translateX(-50%);
   left: 50%;
   color: black;
