--- a/src/projects/socialmedia/Nav/NavRight/NavRight.css
+++ b/src/projects/socialmedia/Nav/NavRight/NavRight.css
@@ -1,9 +1,9 @@
 .nav-right {
   position: fixed;
-  right: 9vw;
+
   top: 80px;
 
-  left: calc(50vw+22.5vw+250px);
+  left: calc(50vw+22.5vw);
 
   color: black;
 }
