--- a/src/projects/socialmedia/Nav/NavLeft/Navleft.css
+++ b/src/projects/socialmedia/Nav/NavLeft/Navleft.css
@@ -1,12 +1,9 @@
 .nav-left {
   background-color: transparent;
   position: fixed;
-  left: 9vw;
   top: 80px;
-  width: 25%;
-  max-width: 400px;
-  min-width: 180px;
-
+  width: 250px;
+  right: calc(50vw + 22.5vw + 10px);
   color: black;
 }
 
@@ -14,7 +11,7 @@
   display: grid;
   grid-template-rows: 6fr 2fr 2fr 1fr;
   height: 35vh;
-  width: 70%;
+
   border: 1px solid rgba(128, 128, 128, 0.489);
   text-align: center;
   grid-row-gap: 0px;
@@ -77,7 +74,7 @@
 }
 .nav-left-suggestions {
   background-color: white;
-  width: 70%;
+
   height: 45vh;
   margin-top: 2vh;
   display: flex;
@@ -114,8 +111,9 @@
   letter-spacing: 0.1em;
 }
 .nav-left-info h5 {
-  color: white;
+  color: grey;
 }
+
 .nav-left-suggested-profile img {
   width: 50px;
   height: 50px;
