--- a/src/projects/socialmedia/Nav/NavLeft/Navleft.css
+++ b/src/projects/socialmedia/Nav/NavLeft/Navleft.css
@@ -39,8 +39,8 @@
   width: 100%;
 }
 .nav-left-img img {
-  width: 95px;
-  height: 95px;
+  max-width: 95px;
+  max-height: 95px;
   border-radius: 50%;
   border: 2px solid white;
 }
