--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -27,7 +27,10 @@
 .portfolio_item h3 {
   margin: 1.2rem 0 2rem;
 }
-
+/* .social-media-project {
+  background: var(--color-primary-social);
+  color: black;
+} */
 @media screen and (max-width: 1024px) {
   .portfolio_container {
     grid-template-columns: 1fr 1fr;
