--- a/src/projects/socialmedia/main/components/CreatePosts/CreatePost.css
+++ b/src/projects/socialmedia/main/components/CreatePosts/CreatePost.css
@@ -63,6 +63,10 @@
   width: 100%;
 }
 
+.image-upload > input {
+  display: none;
+}
+
 @media only screen and (max-width: 768px) {
   .CreatePost {
     grid-template-columns: 1fr;
