--- a/src/projects/socialmedia/main/components/CreatePosts/CreatePost.css
+++ b/src/projects/socialmedia/main/components/CreatePosts/CreatePost.css
@@ -4,6 +4,7 @@
   border: 1px solid rgba(128, 128, 128, 0.616);
   width: 100%;
   margin: 0 auto;
+  margin-bottom: 20px;
   padding: 5px 10px;
   border-radius: 5px;
   background: whitesmoke;
