--- a/src/projects/socialmedia/Nav/NavRight/NavRight.css
+++ b/src/projects/socialmedia/Nav/NavRight/NavRight.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 45vh;
+  height: 400px;
 
   border: 1px solid grey;
   text-align: center;
@@ -78,7 +78,7 @@
   padding: 5px;
   color: white;
   margin-top: 2vh;
-  height: 35vh;
+  height: 350px;
 
   border: 2px solid grey;
   text-align: center;
