--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   padding: 25px 20px;
   gap: 15px;
-  margin: 20px 0;
+
+  margin-bottom: 20px;
   width: 100%;
   background: var(--color-light);
   cursor: pointer;
@@ -51,11 +52,11 @@
 .postFeed-post-stats > div {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 3px;
 }
-.postFeed-post-stats small {
-  margin-left: 1rem;
-}
+
 .postFeed-post-stats i {
   font-size: 20px;
   cursor: pointer;
