--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -39,7 +39,7 @@
 
 .PostCard-Post-details {
   display: grid;
-  grid-template-rows: 1fr 1fr 10fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 10fr 1fr 1fr;
   padding: 0 5px;
   height: 600px;
 }
