--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -15,7 +15,7 @@
   width: 100%;
 
   max-width: 1600px;
-  margin: 30px auto;
+  margin: 50px auto 0;
 
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
@@ -32,16 +32,20 @@
 .PostCard-Post {
   display: grid;
   grid-template-columns: 2.5fr 1fr;
-  background-color: #154c7988;
+  grid-column-gap: 0;
+  background-color: rgba(210, 105, 30, 0.386);
+  background: rgba(255, 255, 255, 0.473);
+  border: 2px solid rgba(128, 128, 128, 0.61);
   padding: 0;
   color: white;
 }
 
 .PostCard-Post-details {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 10fr 1fr 1fr;
-  padding: 0 5px;
-  height: 600px;
+  background-color: #154c7988;
+  grid-template-rows: 1fr 1fr 1fr 10fr 2fr;
+  height: 800px;
+  padding: 10px;
 }
 .PostCard-Post-details-poster {
   padding: 5px;
@@ -93,16 +97,38 @@
 .PostCard-Post-details-post-actions {
   display: flex;
   justify-content: space-around;
+  color: var(--color-primary-social);
+  align-items: center;
+
+  height: 100px;
+  margin: 20px auto;
+  border-radius: 5px;
 }
 .PostCard-arrow {
   cursor: pointer;
-  font-size: 35px;
+  font-size: 45px;
+  color: var(--color-primary-social);
 }
 .PostCard-Post-image {
   margin: 10px;
 }
+.PostCard-Post-details-post-make-comment {
+  width: 100%;
+}
+.PostCard-Post-details-post-make-comment input {
+  width: 100%;
+  height: 2rem;
+  border-radius: 5px;
+  border: none;
+}
+.PostCard-Post-details-post-make-comment > div {
+  margin: 5px auto;
+}
 @media screen and (max-width: 968px) {
   .PostCard-Post {
     grid-template-columns: 1fr;
+  }
+  .PostCard-Post-details-post-actions {
+    display: none;
   }
 }
