--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -36,6 +36,7 @@
   background-color: rgba(210, 105, 30, 0.386);
   background: rgba(255, 255, 255, 0.473);
   border: 2px solid rgba(128, 128, 128, 0.61);
+  height: 750px;
   padding: 0;
   color: white;
 }
@@ -44,8 +45,9 @@
   display: grid;
   background-color: #154c7988;
   grid-template-rows: 1fr 1fr 1fr 10fr 2fr;
-  height: 800px;
-  padding: 10px;
+  border: 1px solid orange;
+  height: 740px;
+  margin: 5px auto;
 }
 .PostCard-Post-details-poster {
   padding: 5px;
@@ -124,11 +126,18 @@
 .PostCard-Post-details-post-make-comment > div {
   margin: 5px auto;
 }
-@media screen and (max-width: 968px) {
+@media screen and (max-width: 1238px) {
   .PostCard-Post {
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 3fr;
   }
   .PostCard-Post-details-post-actions {
     display: none;
+  }
+  .PostCard-Post-details {
+    height: 400px;
+  }
+  .PostCard-Post-image img {
+    height: 400px;
   }
 }
