--- a/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
+++ b/src/projects/socialmedia/main/components/PostsFeed/PostsFeed.css
@@ -79,7 +79,44 @@
   border-radius: 5px;
   font-size: 21px;
 }
+.post-feed-action {
+  cursor: pointer;
+}
+.post-feed-share {
+  border: 1px solid grey;
+}
 
+/*PostFeedComment*/
+.post-feed-comment {
+  padding: 0px;
+}
+.post-feed-comment img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.post-feed-comment-buttons {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.post-feed-comment-buttons > button {
+  cursor: pointer;
+}
+.post-feed-comment input {
+  width: 100%;
+  height: 3rem;
+  margin: 5px auto;
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 5px;
+  padding-top: 0;
+}
+.post-feed-comment-post {
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+  grid-gap: 10px;
+}
 @media screen and (min-width: 1024px) {
   .post-feed-action > div:hover {
     background-color: var(--color-secondary-social);
