--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -1,13 +1,179 @@
 .profile-page-main {
-  border: 1px solid orange;
-  background: green;
-  position: absolute;
-  width: 70vw;
-  min-width: 300px;
-  height: 100vh;
-  padding-top: 80px;
-  top: 7vh;
+ 
+  position: relative;
+  width: 100%;
+  max-width:1300px;
+
+
+  padding-top: 40px;
+  top: 0;
   transform: translateX(-50%);
   left: 50%;
   color: black;
+  
+}
+.profile-page-upper{
+
+  
+  background:white;
+  position: relative;
+  grid-template-columns: 4fr 3fr;
+}
+.profile-page-upper-top{
+  position: relative;
+  background:var(--color-primary-social);
+  height:200px;
+ 
+display:grid;
+grid-template-columns: 1fr
+}
+
+
+
+.profile-page-upper-bottom{
+  background:var(--color-secondary-social);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom:10px;
+  align-items:center;
+  width:100%;
+  height:150px;
+}
+.profile-page-upper-top-status{
+  padding:5px;
+  display: flex;
+  justify-content: flex-start;
+
+  color:rgb(47, 255, 158);
+}
+.profile-page-upper-top-name{
+  padding:5px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  
+  color:white;
+  padding-right: 20px;
+}
+.profile-page-upper-top-status{
+  display: flex;
+  justify-content: flex-start;
+}
+.profile-page-lower{
+
+  
+}
+.profile-page-upper-image{
+  position: absolute;
+  top:50%;
+  left:25%;
+  transform:translate(-50%, -50%);
+  padding:5px
+
+}
+.profile-page-upper-image img{
+width: 250px;
+height: 250px;
+border-radius: 50%;
+}
+.profile-page-upper-bottom-list ul{
+ width: 100%;
+ display: flex;
+ flex-direction: row;
+ justify-content:center;
+ gap: 60px;
+ color: rgb(224, 214, 214);
+}
+.profile-page-lower-buttons{
+background: wheat;
+margin: 10px 0;
+display: flex;
+justify-content:space-evenly;
+padding:10px 0;
+border-radius: 5px;
+  }
+.profile-page-lower-btn{
+  width:10rem;
+}
+.profile-page-lower-btn > button {
+width: 100%;
+cursor: pointer;
+}
+.profile-page-lower-posts{
+ 
+  height: 100%;
+  overflow-y: scroll;
+  margin-top:10px;
+}
+
+@media screen and (min-width: 1024px) {
+.profile-page-lower{
+  margin-top:10px;
+  display:grid;
+  grid-template-columns: 3fr 4fr;
+  gap:20px;
+}
+.profile-page-lower-buttons{
+  
+   flex-direction: column;
+ gap:20px;
+  align-items:center;
+}
+
+.profile-page-lower-top-side{
+  height: 100vh;
+  background-color:steelblue;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 80px;
+  border-top: 4px solid chocolate;
+}
+.profile-page-lower-bio,.profile-page-lower-friends{
+  border: 1px solid grey;
+  height:200px;
+  margin-top:10px;
+}
+.profile-page-lower-bio ul
+{
+ 
+  height: 100%;
+  display:flex;
+  flex-direction: column;
+  justify-content:space-evenly;
+  padding-top:0px;
+  padding-left: 40px;
+}
+.profile-page-lower-friends{
+  border: 1px solid black;
+}
+.profile-page-friend img{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 1px solid chocolate;
+}
+.profile-page-friendList{
+
+
+}
+.profile-page-friendList{
+padding:10px;
+  overflow-x:scroll;
+  border: 1px solid red;
+  display: flex;
+  gap:30px;
+}
+.profile-page-footer{
+border: 1px solid white;
+height:50px;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+margin-top:5px;
+}
+
+
+
+
 }
