--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -1,10 +1,7 @@
 .profile-page-main {
- 
   position: relative;
   width: 100%;
   max-width:1300px;
-
-
   padding-top: 40px;
   top: 0;
   transform: translateX(-50%);
@@ -13,8 +10,6 @@
   
 }
 .profile-page-upper{
-
-  
   background:white;
   position: relative;
   grid-template-columns: 4fr 3fr;
@@ -45,7 +40,7 @@ grid-template-columns: 1fr
   display: flex;
   justify-content: flex-start;
 
-  color:rgb(47, 255, 158);
+  color:rgb(12, 175, 12);
 }
 .profile-page-upper-top-name{
   padding:5px;
@@ -106,7 +101,10 @@ cursor: pointer;
   overflow-y: scroll;
   margin-top:10px;
 }
-
+.profile-page-footer,.profile-page-lower-friends,
+.profile-page-lower-bio{
+  display: none;
+}
 @media screen and (min-width: 1024px) {
 .profile-page-lower{
   margin-top:10px;
@@ -123,20 +121,28 @@ cursor: pointer;
 
 .profile-page-lower-top-side{
   height: 100vh;
-  background-color:steelblue;
+  
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 80px;
-  border-top: 4px solid chocolate;
+  
 }
 .profile-page-lower-bio,.profile-page-lower-friends{
+  display: block;
   border: 1px solid grey;
+  background-color:var( --color-secondary-social);
+  color: white;
   height:200px;
   margin-top:10px;
+  padding:5px;
+  padding-top:10px;
+  border-radius: 5px;
+}
+.profile-page-footer,.profile-page-posts{
+  display: block;
 }
 .profile-page-lower-bio ul
 {
- 
   height: 100%;
   display:flex;
   flex-direction: column;
@@ -147,20 +153,25 @@ cursor: pointer;
 .profile-page-lower-friends{
   border: 1px solid black;
 }
+.profile-page-friend{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items:center;
+  text-align:center
+
+}
 .profile-page-friend img{
   width: 80px;
   height: 80px;
   border-radius: 50%;
   border: 1px solid chocolate;
 }
-.profile-page-friendList{
 
-
-}
 .profile-page-friendList{
 padding:10px;
   overflow-x:scroll;
-  border: 1px solid red;
+
   display: flex;
   gap:30px;
 }
