--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -79,14 +79,17 @@ border-radius: 50%;
  justify-content:center;
  gap: 60px;
  color: rgb(224, 214, 214);
+ 
+ 
 }
 .profile-page-lower-buttons{
-background: wheat;
+  background-color: rgba(128, 128, 128, 0.106);
 margin: 10px 0;
 display: flex;
 justify-content:space-evenly;
 padding:10px 0;
 border-radius: 5px;
+border: 1px solid rgba(128, 128, 128, 0.39);
   }
 .profile-page-lower-btn{
   width:10rem;
@@ -153,12 +156,17 @@ cursor: pointer;
 .profile-page-lower-friends{
   border: 1px solid black;
 }
+.profile-page-lower-bio li{
+  display:flex;
+  gap:20px;
+}
 .profile-page-friend{
   display: flex;
   flex-direction: column;
   justify-content:center;
   align-items:center;
-  text-align:center
+  text-align:center;
+  gap:10px;
 
 }
 .profile-page-friend img{
@@ -169,11 +177,16 @@ cursor: pointer;
 }
 
 .profile-page-friendList{
-padding:10px;
-  overflow-x:scroll;
 
   display: flex;
   gap:30px;
+  width: 550px;
+padding:10px;
+
+overflow: auto !important;
+white-space: nowrap !important;
+
+
 }
 .profile-page-footer{
 border: 1px solid white;
