--- a/src/projects/socialmedia/Nav/NavTop/NavTop.css
+++ b/src/projects/socialmedia/Nav/NavTop/NavTop.css
@@ -14,6 +14,7 @@
   font-family: "Poppins", sans-serif;
   font-family: "Roboto", sans-serif;
   transition: all 300ms smooth;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.385);
 }
 
 .logo {
