--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -70,9 +70,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-
+  background: var(--color-secondary-social);
   margin: 0px auto;
-  border-bottom: 3px solid rgba(128, 128, 128, 0.582);
 }
 
 .PostCard-Post-details-post-comments h3 {
