--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -1,205 +1,238 @@
 .profile-page-main {
   position: relative;
   width: 100%;
-  max-width:1300px;
+  max-width: 1300px;
   padding-top: 40px;
   top: 0;
   transform: translateX(-50%);
   left: 50%;
   color: black;
-  
 }
-.profile-page-upper{
-  background:white;
+.profile-page-upper {
+  background: white;
   position: relative;
   grid-template-columns: 4fr 3fr;
 }
-.profile-page-upper-top{
+.profile-page-upper-top {
   position: relative;
-  background:var(--color-primary-social);
-  height:200px;
- 
-display:grid;
-grid-template-columns: 1fr
+  background: var(--color-primary-social);
+  height: 200px;
+
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
-
-
-.profile-page-upper-bottom{
-  background:var(--color-secondary-social);
+.profile-page-upper-bottom {
+  background: var(--color-secondary-social);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-bottom:10px;
-  align-items:center;
-  width:100%;
-  height:150px;
+  padding-bottom: 10px;
+  align-items: center;
+  width: 100%;
+  height: 150px;
 }
-.profile-page-upper-top-status{
-  padding:5px;
+.profile-page-upper-top-status {
+  padding: 5px;
   display: flex;
   justify-content: flex-start;
 
-  color:rgb(12, 175, 12);
+  color: rgb(12, 175, 12);
 }
-.profile-page-upper-top-name{
-  padding:5px;
+.profile-page-upper-top-name {
+  padding: 5px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  
-  color:white;
+  color: white;
   padding-right: 20px;
 }
-.profile-page-upper-top-status{
+.profile-page-upper-top-status {
   display: flex;
   justify-content: flex-start;
 }
-.profile-page-lower{
-
-  
+.profile-page-lower {
 }
-.profile-page-upper-image{
+.profile-page-upper-image {
   position: absolute;
-  top:50%;
-  left:25%;
-  transform:translate(-50%, -50%);
-  padding:5px
+  top: 40%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  padding: 5px;
+}
+.profile-page-upper-image img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+.profile-page-upper-bottom {
+  width: 100%;
 
+  display: flex;
+  justify-content: center;
 }
-.profile-page-upper-image img{
-width: 250px;
-height: 250px;
-border-radius: 50%;
+.profile-page-upper-bottom-list ul {
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 60px;
+  color: rgb(224, 214, 214);
 }
-.profile-page-upper-bottom-list ul{
- width: 100%;
- display: flex;
- flex-direction: row;
- justify-content:center;
- gap: 60px;
- color: rgb(224, 214, 214);
- 
- 
+.profile-page-upper-bottom-list-actions {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10px;
+  gap: 10px;
+  width: 55%;
+  max-width: 300px;
+  height: 100px;
+  left: calc(44vw);
+  top: calc(28vh);
 }
-.profile-page-lower-buttons{
+
+.profile-page-lower-buttons {
   background-color: rgba(128, 128, 128, 0.106);
-margin: 10px 0;
-display: flex;
-justify-content:space-evenly;
-padding:10px 0;
-border-radius: 5px;
-border: 1px solid rgba(128, 128, 128, 0.39);
-  }
-.profile-page-lower-btn{
-  width:10rem;
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px 0;
+  border-radius: 5px;
+  border: 1px solid rgba(128, 128, 128, 0.39);
+}
+.profile-page-lower-btn {
+  width: 10rem;
 }
 .profile-page-lower-btn > button {
-width: 100%;
-cursor: pointer;
+  width: 100%;
+  cursor: pointer;
 }
-.profile-page-lower-posts{
- 
+.profile-page-lower-posts {
   height: 100%;
   overflow-y: scroll;
-  margin-top:10px;
+  margin-top: 10px;
 }
-.profile-page-footer,.profile-page-lower-friends,
-.profile-page-lower-bio{
+.profile-page-footer,
+.profile-page-lower-friends,
+.profile-page-lower-bio {
   display: none;
 }
-
-
+.header-sm {
+  display: none;
+}
+#message-lg {
+  display: none;
+}
 @media screen and (min-width: 1024px) {
-.profile-page-lower{
-  margin-top:10px;
-  display:grid;
-  grid-template-columns: 3fr 4fr;
-  gap:20px;
-}
-.profile-page-lower-buttons{
-  
-   flex-direction: column;
- gap:20px;
-  align-items:center;
+  .profile-page-lower {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+    gap: 20px;
+  }
+  .profile-page-lower-buttons {
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+  }
+  .profile-page-lower-buttons > div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+  .profile-page-lower-top-side {
+    height: 100vh;
+
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 80px;
+  }
+  .profile-page-lower-bio,
+  .profile-page-lower-friends {
+    display: block;
+    border: 1px solid grey;
+    background-color: var(--color-secondary-social);
+    color: white;
+    height: 200px;
+    margin-top: 10px;
+    padding: 5px;
+    padding-top: 10px;
+    border-radius: 5px;
+  }
+  .profile-page-footer,
+  .profile-page-posts {
+    display: block;
+  }
+  .profile-page-lower-bio ul {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-top: 0px;
+    padding-left: 40px;
+  }
+  .profile-page-lower-friends {
+    border: 1px solid black;
+  }
+  .profile-page-lower-bio li {
+    display: flex;
+    gap: 20px;
+  }
+  .profile-page-friend {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+  .profile-page-friend img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 1px solid chocolate;
+  }
+  #message-lg {
+    display: block;
+  }
+  .profile-page-friendList {
+    display: flex;
+    gap: 30px;
+    width: 550px;
+    padding: 10px;
+
+    overflow: auto !important;
+    white-space: nowrap !important;
+  }
+  .profile-page-footer {
+    border: 1px solid white;
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 5px;
+  }
 }
 
-.profile-page-lower-top-side{
-  height: 100vh;
-  
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 80px;
-  
-}
-.profile-page-lower-bio,.profile-page-lower-friends{
-  display: block;
-  border: 1px solid grey;
-  background-color:var( --color-secondary-social);
-  color: white;
-  height:200px;
-  margin-top:10px;
-  padding:5px;
-  padding-top:10px;
-  border-radius: 5px;
-}
-.profile-page-footer,.profile-page-posts{
-  display: block;
-}
-.profile-page-lower-bio ul
-{
-  height: 100%;
-  display:flex;
-  flex-direction: column;
-  justify-content:space-evenly;
-  padding-top:0px;
-  padding-left: 40px;
-}
-.profile-page-lower-friends{
-  border: 1px solid black;
-}
-.profile-page-lower-bio li{
-  display:flex;
-  gap:20px;
-}
-.profile-page-friend{
-  display: flex;
-  flex-direction: column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  gap:10px;
+@media screen and (max-width: 1024px) {
+  .header-sm {
+    display: block;
 
-}
-.profile-page-friend img{
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  border: 1px solid chocolate;
+    margin-left: 30vw;
+    margin-bottom: 15px;
+    color: white;
+  }
+  .profile-page-upper-top-name {
+    display: none;
+  }
 }
 
-.profile-page-friendList{
-
-  display: flex;
-  gap:30px;
-  width: 550px;
-padding:10px;
-
-overflow: auto !important;
-white-space: nowrap !important;
-
-
-}
-.profile-page-footer{
-border: 1px solid white;
-height:50px;
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-margin-top:5px;
-}
-
-
-
-
+#msg :hover,
+#message-lg :hover {
+  background: green;
 }
