--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -90,6 +90,13 @@
   display: grid;
   grid-template-columns: 1fr 5fr;
 }
+.no-comments {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .PostCard-Post-comment-image {
   display: flex;
   justify-content: center;
@@ -125,8 +132,8 @@
   color: var(--color-primary-social);
   align-items: center;
 
-  height: 100px;
-  margin: 20px auto;
+  height: 50px;
+  margin: 5px auto;
   border-radius: 5px;
 }
 .PostCard-arrow {
