--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400&display=swap");
+
 .profile-page-main {
   position: relative;
   width: 100%;
@@ -17,7 +19,6 @@
   position: relative;
   background: var(--color-primary-social);
   height: 200px;
-
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -51,8 +52,59 @@
   display: flex;
   justify-content: flex-start;
 }
-.profile-page-lower {
+
+.profile-page-upper-new {
+  border: 3px solid grey;
+
+  height: max-content;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
 }
+.profile-page-upper-top-new {
+  background: url(https://cdn.pixabay.com/photo/2015/06/19/21/24/avenue-815297_960_720.jpg)
+    no-repeat center center/cover;
+  padding: 3px;
+  display: flex;
+  justify-content: center;
+}
+
+.profile-page-upper-top-new img {
+  height: 310px;
+  width: 310px;
+  border-radius: 50%;
+  border: 3px solid var(--color-secondary-social);
+}
+.profile-page-upper-bottom-new {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+}
+
+.profile-page-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 10px;
+  padding: 5px 10px;
+  background-color: var(--color-primary-social);
+  color: white;
+  font-family: "Noto Serif", serif;
+  line-height: 1.6em;
+}
+.profile-about {
+  width: 80%;
+
+  padding: 3px;
+  line-height: 1.6em;
+}
+
+.profile-page-buttons {
+  background-color: var(--color-secondary-social);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0px;
+}
+
 .profile-page-upper-image {
   position: absolute;
   top: 40%;
@@ -104,10 +156,10 @@
   border: 1px solid rgba(128, 128, 128, 0.39);
 }
 .profile-page-lower-btn {
-  width: 10rem;
+  width: 8rem;
 }
 .profile-page-lower-btn > button {
-  width: 100%;
+  width: 80%;
   cursor: pointer;
 }
 .profile-page-lower-posts {
