--- a/src/projects/socialmedia/Nav/NavLeft/Navleft.css
+++ b/src/projects/socialmedia/Nav/NavLeft/Navleft.css
@@ -110,6 +110,7 @@
   text-align: left;
   gap: 5px;
   letter-spacing: 0.1em;
+  cursor: pointer;
 }
 .nav-left-info h5 {
   color: grey;
@@ -119,6 +120,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  cursor: pointer;
 }
 .nav-left-add {
   display: flex;
