--- a/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
+++ b/src/projects/socialmedia/main/components/ProfilePage/ProfilePage.css
@@ -54,11 +54,9 @@
 }
 
 .profile-page-upper-new {
-  border: 3px solid grey;
-
-  height: max-content;
   display: grid;
-  grid-template-rows: 3fr 1fr;
+  grid-template-rows: 2fr 1fr;
+  border-radius: 10px;
 }
 .profile-page-upper-top-new {
   background: url(https://cdn.pixabay.com/photo/2015/06/19/21/24/avenue-815297_960_720.jpg)
@@ -81,14 +79,18 @@
 
 .profile-page-info {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  gap: 10px;
+  justify-content: center;
+  align-items: center;
   padding: 5px 10px;
   background-color: var(--color-primary-social);
   color: white;
   font-family: "Noto Serif", serif;
   line-height: 1.6em;
+}
+.profile-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .profile-about {
   width: 80%;
