--- a/src/projects/Gallery/Gallery.css
+++ b/src/projects/Gallery/Gallery.css
@@ -15,6 +15,12 @@
   margin: 0 auto;
 }
 
+.title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .title h1 {
   color: var(--primary);
   font-size: 1.2rem;
