--- a/src/projects/socialmedia/main/components/PostPage/PostPage.css
+++ b/src/projects/socialmedia/main/components/PostPage/PostPage.css
@@ -41,9 +41,10 @@
   background: rgba(255, 255, 255, 0.473);
 
   height: 100%;
-  max-height: 850px;
+  max-height: fit-content;
   padding: 0;
   color: white;
+  border: 1px solid grey;
 }
 
 .PostCard-Post-details {
@@ -64,10 +65,13 @@
 .PostCard-Post-details-post-text {
   letter-spacing: 0.05em;
   line-height: 1.4em;
-  font-size: 14px;
-
-  padding: 5px;
+  font-size: 18px;
+  border: 2px solid var(--color-primary-social);
+  background-color: var(--color-secondary-social);
+  padding: 10px;
+  margin: 0 5px;
   margin-bottom: 5px;
+  border-radius: 10px;
 }
 .PostCard-Post-details-post-commentsHeader {
   display: flex;
@@ -139,7 +143,7 @@
 }
 .PostCard-arrow {
   cursor: pointer;
-  font-size: 45px;
+  font-size: 35px;
   color: var(--color-primary-social);
 }
 .PostCard-Post-image {
@@ -148,6 +152,12 @@
 .PostCard-Post-image img {
   height: 100%;
   max-height: 700px;
+}
+.PostCard-Post-image video {
+  width: 100%;
+  height: 100%;
+  max-height: 700px;
+  object-fit: cover;
 }
 .PostCard-Post-details-post-make-comment {
   width: 100%;
