--- a/src/projects/socialmedia/Profiles/Profiles.css
+++ b/src/projects/socialmedia/Profiles/Profiles.css
@@ -1,9 +1,19 @@
+.MainGrid{
+display:grid;
+grid-template-columns:1fr 4fr;
+margin: 20px auto;
+border: 4px solid orange;
+width: fit-content;
+grid-gap:20px
+
+}
+
 .ConnectMain {
   background-color: white;
-  border: 1px solid gray;
-  width: 60vw;
+  border: 3px solid crimson;
+  width: 40vw;
   min-width: 450px;
-  margin: 100px auto;
+
 
   transition: 1s ease-in-out;
 }
@@ -111,6 +121,16 @@
   flex-direction: column;
   gap: 10px;
 }
+
+/* Filter bar */
+.filterBar{
+  height:900px;
+  width:100%;
+  background:#203864;
+}
+
+
+
 
 @media only screen and (max-width: 768px) {
   .MainContainer {
